--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div class="main">
-      <img id="qr-code" src="/images/image-qr-code.png" alt="qrCode" />
+      <img id="qr-code" src="/images/QR Code.PNG" alt="qrCode" />
       <p class="headline">Improve your front-end skills by building projects</p>
       <p class="text">
         Scan the QR code to visit Frontend Mentor and take your coding skills to
